# cna-resistdynamics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  Snakefile  TERMS_OF_USE  citation.cff  config.yaml  docker-compose.dev.yml  docker-compose.yml  docker_down.sh  docker_interactive.sh  docker_push.sh  docker_test_local.sh  docker_up.sh  environment.yml  extract_data.py  index.html  make_stan.py  mkdocs.yml  model1.py  model2.py  model3.py  objects.inv  ode_model.py  pde_common.py  pde_deepxde_patient.py  pde_fenicsx_patient.py  pde_mesh_heatmap.py  pde_mesh_view.ipynb  pde_model.py  pde_phiflow_patient.py  pde_pypde_patient.py  pyproject.toml  resistance_state_space  (+4 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
.snakemake/iocache/: latest.pkl
.snakemake/metadata/: cmVzdWx0cy9oZWF0bWFwcw==  cmVzdWx0cy9tZXNoX3ZpZXc=  cmVzdWx0cy9vZGVfZ29mX3BvaW50cy5jc3Y=  cmVzdWx0cy9wZGU=
api/: index.html
cli/: index.html
contributing/: index.html
data/: OV_patientDNA_sampleList.txt  ReadMe.txt  index.html
data/CNA_tables/: Copynumber_tables_UP0018.combined.500.RData  Copynumber_tables_UP0042.combined.500.RData  Copynumber_tables_UP0053.combined.500.RData  Copynumber_tables_UP0055.combined.500.RData  Copynumber_tables_UP0056.combined.500.RData
data/liquidCNA_results/: Drivers_subclonalCNA.txt  Estimates_OV_UP0018.vR.filtered.500.RData  Estimates_OV_UP0042.vR.filtered.500.RData  (+4 more)
docs/: api.md  cli.md  contributing.md  data.md  index.md  installation.md  model.md  quickstart.md  workflow.md
installation/: index.html
model/: index.html
quickstart/: index.html
search/: search_index.json
src/: __init__.py  cli.py  main.py  metrics.py  odefit.py  odeio.py  odemodel.py  odeplotio.py  oderunner.py  pdefit.py  pdegrid.py  pdeio.py  pdemodel.py  pdeplotio.py  pderunner.py  pdesolve.py  simode.py  simpde.py  timelog.py
stan/: make_stan.py  stan_data.json
tests/: test_cli.py  test_config.py  test_dataio.py  test_metrics.py  test_odemodel.py  test_utils.py
tumorfits/: __init__.py  cli.py  dataio.py  identifiability.py  main.py  meshview.py  metrics.py  odefit.py  odeio.py  odemodel.py  odeplotio.py  odeposterior.py  oderunner.py  pdefit.py  pdegrid.py  pdeio.py  pdemodel.py  pdeplotio.py  pdeposterior.py  pderunner.py  pdesolve.py  simode.py  simpde.py  timelog.py  utils.py
workflow/: index.html
(+41 files in other folders)
