# SPDX-FileCopyrightText: 2025 Abhinav Mishra
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tumorfits"
version = "0.9.3"
description = "ODE → PDE dynamical modelling of chemotherapy resistance from liquidCNA measurements"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Abhinav Mishra", email = "mishraabhinav@gmail.com" }]
keywords = ["cancer", "resistance", "ODE", "PDE", "liquidCNA", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "numba>=0.59",
    "joblib>=1.3",
    "statsmodels>=0.14",
    "seaborn>=0.13",
    "pyreadr>=0.5",
    "tqdm",
    "PyYAML>=6.0",
    "snakemake",
    "rich"
]

[project.optional-dependencies]
bayesian = ["pymc>=5.0", "pytensor>=2.18", "arviz>=0.18"]
pde = ["mpi4py>=3.1"]
viz = ["pyvista>=0.43"]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs",
    "mkdocs-shadcn",
    "mkdocstrings[python]",
    "pymdown-extensions>=10.12",
]

[project.scripts]
tumorfits = "tumorfits.cli:main"

[project.urls]
Homepage = "https://github.com/bibymaths/cna-resistdynamics"
Repository = "https://github.com/bibymaths/cna-resistdynamics"
Issues = "https://github.com/bibymaths/cna-resistdynamics/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tumorfits*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["tumorfits", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tumorfits"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Many modules (pdesolve, pdeposterior, odeposterior, identifiability, etc.)
# require FEniCS, PETSc, or PyMC which are not available in lightweight CI.
# Coverage threshold is set conservatively to reflect the testable surface.
fail_under = 9